Implement AI caption and tags

--- a/package.json
+++ b/package.json
@@ -25,10 +25,16 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.39.0",
+    "@google-cloud/vision": "^5.1.0",
     "@supabase/supabase-js": "^2.48.1",
+    "@types/sharp": "^0.31.1",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "stripe": "^17.6.0"
+    "sharp": "^0.33.5",
+    "stripe": "^17.6.0",
+    "uuid": "^11.1.0"
   }
 }
